syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "common/source.proto";

option go_package = "api/grpc/v1/reminder;reminder_grpc_service";

message CreateReminderGrpcRequest {
    string tenant = 1;
    string loggedInUserId = 2;
    SourceFields sourceFields = 3;
    google.protobuf.Timestamp createdAt = 4;
    string content = 5;
    google.protobuf.Timestamp dueDate =6;
    string organizationId = 7;
    bool dismissed = 8;
}

enum ReminderFieldMask {
    REMINDER_PROPERTY_NONE = 0;
    REMINDER_PROPERTY_CONTENT = 1;
    REMINDER_PROPERTY_DUE_DATE = 2;
    REMINDER_PROPERTY_DISMISSED = 3;
}

message UpdateReminderGrpcRequest {
    string tenant = 1;
    string loggedInUserId = 2;
    string reminderId = 3;
    string app_source = 4;
    string content = 5;
    google.protobuf.Timestamp dueDate = 6;
    bool dismissed = 7;
    google.protobuf.Timestamp updatedAt = 8;

    repeated ReminderFieldMask fieldsMask = 9;
}

message ReminderGrpcResponse {
    string id = 1;
}

service ReminderGrpcService {
    rpc CreateReminder(CreateReminderGrpcRequest) returns (ReminderGrpcResponse);
    rpc UpdateReminder(UpdateReminderGrpcRequest) returns (ReminderGrpcResponse);
}
